--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 html {
 background-color:hsl(240,25%,12%);
 scrollbar-color:gray #444;
+width:100%;
 }
 ::-webkit-scrollbar {
 width:15px;
@@ -14,7 +15,7 @@ border-radius:5px;
 body {
 margin:0px auto 7px;
 padding:0 5px;
-color:rgb(200, 195, 188);
+color:rgb(200,195,188);
 min-width:350px;
 max-width:1800px;
 text-align:center;
@@ -22,7 +23,7 @@ text-align:center;
 body, textarea, input, select {
 font:12px/1.25 Verdana,Arial,Helvetica,sans-serif;
 }
-@font-face {
+/* @font-face {
 src:url(/css/gmi.woff2) format('woff2');
 font-family:'Material Icons';
 font-style:normal;
@@ -30,7 +31,7 @@ font-weight:400;
 }
 .gmi {
 font-family:'Material Icons';
-}
+} */
 img {
 vertical-align:middle;
 }
@@ -92,8 +93,9 @@ display:inline-block;
 }
 fieldset {
 display:inline-block;
-border:solid 3px rgba(51,51,119); /*hsl(180,75%,25%);*/
+border:solid 3px rgb(51,51,119);
 padding:4px;
+margin:9px 3px 3px;
 border-radius:5px;
 }
 legend {
@@ -331,7 +333,7 @@ display:inline-block;
 padding:3px;
 text-decoration:none;
 color:#fff;
-background-color:rgba(51,51,119);
+background-color:rgb(51,51,119);
 }
 a.menu:link, a.menu:visited {
 color:#fff;
@@ -350,19 +352,27 @@ margin:2px 0px;
 padding:0px 3px;
 }
 
-div.note {
-background-color:#9ee;
-color:#000;
-padding:6px 9px;
-margin-top:3px;
+#hb {
+position:relative;
+top:-1px;
+border-radius:0;
 }
+#statmsg {
+display:inline-block;
+padding:3px;
+margin:5px;
+min-width:460px;
+max-width:750px;
+height:4.4em;
+font-size:0.9em;
+line-height:1.2;
+overflow-y:scroll;
+border:2px solid rgb(51,51,119);
+color:#aaa;
+}
+
 td.gray, span.gray, p.gray {
 color:#ccc;
-}
-div.gray {
-background-color:#ddd;
-padding:3px;
-margin:3px 0px 2px 0px;
 }
 div.m5 {
 margin:5px;
@@ -415,7 +425,7 @@ margin:12px;
 }
 .menu, .fmenu {
 border-radius:12px;
-border:solid 2px rgb(51, 153, 51);
+border:solid 2px rgb(51,153,51);
 margin-top:0.5em;
 }
 p + .menu {
