--- a/css/main.css
+++ b/css/main.css
@@ -145,10 +145,11 @@ display:inline-block;
 margin:0.5em;
 min-width:460px;
 max-width:750px;
-height:4.4em;
+height:5.5em;
 font-size:0.9em;
 line-height:1.2;
 overflow-y:scroll;
+resize:both;
 color:#aaa;
 }
 
@@ -220,24 +221,28 @@ table.grid th, table.grid td {
 padding:4px;
 }
 table.grid tr.cColor td { /* Link Connecting */
-background-color:red;
+background-color:purple;
 color:yellow;
 }
 table.grid tr.rColor td { /* Link Keyed */
 background-color:maroon;
 color:yellow;
 }
-table.grid tr.gColor td { /* Node Idle */
-background-color:#132;
+table.grid tr.gColor td, td.gColor { /* Node Idle */
+background-color:hsl(150,50%,15%);
 }
-table.grid tr.tColor td { /* Node PTT */
+table.grid tr.tColor td, td.tColor { /* Node PTT */
 background-color:maroon;
 }
-table.grid tr.lColor td { /* Node COS */
+table.grid tr.lColor td, td.lColor { /* Node COS */
 background-color:green;
 }
 table.grid tr.bColor td { /* Node COS+PTT */
 background-color:#660;
+}
+
+td.wColor { /* Active, Idle, & WT enabled */
+background-color:hsl(150,50%,20%);
 }
 
 div.twrap {
