Support 7-digit (EchoLink) node numbers when reading in favorites.ini. Readme updates

--- a/css/main.css
+++ b/css/main.css
@@ -161,7 +161,7 @@ color:#aaa;
 }
 #scanmsg {
 color:#999;
-margin:0.25em;
+margin:2px;
 font-size:0.9em;
 line-height:1.2;
 font-family:"Lucida Console",Courier,monospace;
