Implement User Authentication, User Admin, Login/Logout, User Settings and Cfg Management functions. Major refactoring and additions. AllScan now defaults public (not logged-in) users to Read-Only access. This can be changed to None (no public access), Read/Modify, or to Full (no logins needed). Upon install of this version, AllScan will automatically verify the system configuration, create its Database and necessary tables, and then when you first visit the allscan url will prompt you to create an Admin user account, with detailed usage notes.

--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,7 @@ color:#fff;
 margin:1px 4px;
 padding:2px 4px;
 border:2px;
+width:95%;
 }
 input[type=button], input[type=submit], input::file-selector-button {
 color:#fff;
@@ -282,6 +283,7 @@ margin:0.5em auto;
 font-size:13px;
 }
 ul, ol {
+display:inline-block;
 max-width:80%;
 margin:0.5em auto;
 font-size:13px;
@@ -328,6 +330,9 @@ text-align:left;
 .right {
 text-align:right;
 }
+.w600 {
+max-width:600px;
+}
 .floatright {
 position:relative;
 float:right;
@@ -345,10 +350,8 @@ margin-left:0.6em;
 margin-right:0.6em;
 max-width:800px;
 }
-pre.ok {
+.ok {
 color:#7f7;
-font-weight:bold;
-font-size:15px;
 }
 .error {
 color:#f77;
