Major improvement to Keyed node status detection. ASL stats API data for many nodes shows a 0 stats.keyed value even when the node is in fact keyed. Testing revealed that the stats.keyups count is valid in these cases however and thus keyed status can be detected from changes in the stats.keyups count between stats requests. The '#' column for the node is now highlighted in red / dark red if stats.keyed=1 or if stats.keyups count increased since the previous stats request for that node, and will remain highlighted for 2 minutes after stats.keyed=1 / stats.keyups last increased.

--- a/css/main.css
+++ b/css/main.css
@@ -255,6 +255,9 @@ background-color:hsl(150,50%,15%);
 table.grid tr.tColor td, td.tColor { /* Node PTT */
 background-color:maroon;
 }
+td.t2Color { /* Node Recently Keyed */
+background-color:#600000;
+}
 table.grid tr.lColor td, td.lColor { /* Node COS */
 background-color:green;
 }
