Support 'Favorites.ini Locations' Cfgs setting. Optimizations to Favorites Add/Delete functions, support cases of blank or nonexistent file.

--- a/css/main.css
+++ b/css/main.css
@@ -184,6 +184,7 @@ margin:2px auto;
 font-size:0.9em;
 line-height:1.2;
 font-family:"Lucida Console",Courier,monospace;
+max-width:95%;
 }
 
 table tr th, table tr td {
